--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "mongoose": "^6.5.2",
     "morgan": "~1.9.1",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-plugin-pug": "^1.2.4"
   }
 }
